[package]
name = "rspd"
authors = ["Brandon Pitman <bran@bran.land>"]
edition = "2021"

[dependencies]
byteorder = "1"
clap = "2"
log = "0.4"
pin-project = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
simple_logger = "4"
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
