[package]
name = "rspd"
authors = ["Brandon Pitman <bran@bran.land>"]
edition = "2024"

[dependencies]
byteorder = "1"
clap = { version = "4", features = ["derive"] }
pin-project = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "time"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
